style.css
* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

ul .authors {
  list-style: none;
  float: right;
  top: 5px;
  padding-left: 5px;
  border: none;
}

ul li {
  list-style: none;
  margin-left: 15px;
  padding-bottom: 7px;
}

.octocat img {
  height: 325px;
  width: 325px;
  margin-bottom: 10px;
  display: inline;
  float: left;
  border: 2px solid lightgrey;
  border-radius: 2px;
}

.octocat {
  float: left;
  border-bottom: solid 2px lightgrey;
}

.image-caption {
  float: right;
}

.image-number {

}

.authors img {
  height: 25px;
  width: 25px;
  float: right;
  border-radius: 1px;
  border: none;
}

.authors {
  list-style: none;
}



/* triangle code:
width: 0;
height: 0;
border-style: solid;
border-width: 100px 100px 0 100px;
border-color: #afb2b5 transparent transparent transparent;
*/

